@@ -2,6 +2,12 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2022 Antti Ajanki
 Distributed under the GPL v3
 
+<unreleased>
+
+- Switched back to HLS stream. MPEG-DASH resulted in slow and
+  sometimes incomplete downloads. Expect again (harmless) warnings
+  about subtitles.
+
 Version 20220518
 
 - Improved subtitle support by preferring MPEG-DASH streams over HLS
